refactor(raiden-core): 修复 LambdaUtils 排序方法返回值
- 将 stream().sorted().toList() 替换为 stream().sorted().collect(Collectors.toList())
- 更新相关测试用例以适应新的返回值